[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/NPC/wolf/WolfAnimation.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/NPC/wolf/Wolf.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.7257, 9.19835 )

[node name="Wolf" type="KinematicBody2D"]
position = Vector2( 118.588, 82.7509 )
script = ExtResource( 2 )

[node name="WolfAnimation" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.743561, 2.82284 )
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Timers" type="Node" parent="."]

[node name="Idle" type="Timer" parent="Timers"]
wait_time = 3.0
one_shot = true

[node name="Walk" type="Timer" parent="Timers"]
wait_time = 6.0
one_shot = true

[node name="Rays" type="Node2D" parent="."]

[node name="EdgeDetector" type="RayCast2D" parent="Rays"]
position = Vector2( 16, 2 )
enabled = true
cast_to = Vector2( 0, 12 )

[node name="WallDetector" type="RayCast2D" parent="Rays"]
position = Vector2( 15, 0 )
enabled = true
cast_to = Vector2( 10, 0 )
[connection signal="timeout" from="Timers/Idle" to="." method="_on_Idle_timeout"]
[connection signal="timeout" from="Timers/Walk" to="." method="_on_Walk_timeout"]
